Deployment/API/identity-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: identity
  labels:
    name: identity
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: zapisywarka.local
    http:
      paths:
      - path: "/(sign-up|login|_content/)"
        pathType: Prefix
        backend:
          service:
            name: zapisywarka-api
            port: 
              number: 5000
