Deployment/API/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
  labels:
    name: api
spec:
  rules:
  - #host: zapisywarka.info
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: zapisywarka-api
            port: 
              number: 5000
